tests/ui/feature-gates/feature-gate-coverage.stderr
error[E0658]: the `#[coverage]` attribute is an experimental feature
  --> $DIR/feature-gate-coverage.rs:9:1
   |
LL | #[coverage(off)]
   | ^^^^^^^^^^^^^^^^
   |
   = note: see issue #84605 <https://github.com/rust-lang/rust/issues/84605> for more information
   = help: add `#![feature(coverage)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
